# math_prediction

./: .gitignore  CONTRIBUTING.md  Dockerfile  Kalyan_Panel_Chart_Dataset.xlsx  LICENSE  Makefile  Number_Chart.xlsx  README.md  Sovereign_IPL_Master.py  Sovereign_Judge_Master.py  Weekly_Predictions.txt  Weekly_Predictions.xlsx  _clean_ascii.py  adversarial_kan_engine.py  adversarial_logic_debate.py  adversarial_red_team_hub.py  adversarial_resilience_tester.py  alembic.ini  analyze_deep.py  analyze_patterns.py  analyze_sums_trend.py  analyze_thursday_open.py  ancestral_audit_v52.py  auto_updater.py  automated_observation_matrix.py  autonomous_self_healer.py  batch_debug_processor.py  celestial_resonance_audit.py  check_latest_data.py  check_sheets.py  constitutional_master_rule.py  context_sandbox_gate.py  data_purifier.py  deep_logic_archiver.py  deep_truth_logic_hub.py  diagnostic_audit_v2.py  dimensional_singularity_gate.py  dna_logic_predictor.py  docker-compose.yml  entropy_reduction_logic.py  (+155 more)
config/: settings.yaml
configs/: base.yaml
core/: learned_tricks.json  master_forensic_dataset_unifier.py  sovereign_judicial_council_v52.py  v100_centurion_master_auditor.py  v101_saturation_filter_v52.py  v102_jodi_forensic_singularity.py  v110_inverse_forensic_pathologist.py  v112_temporal_paradox_audit.py  v62_multi_kernel_auditor.py  weekly_audit.py
daily_predictor/: Dockerfile  api.py  data.csv  predict.py  prophet_model.json  save_model.py  tomorrows_prediction.csv
data/: prediction_db.sqlite
docker/: Dockerfile  docker-compose.yml
kernels/: _test_gpu.py  adversarial_audit.py  (+126 more)
(+132 files in other folders)
