[project]
name = "math-prediction"
version = "2.0.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "pandas==2.1.4",
    "numpy==1.26.2",
    "xgboost==2.0.3",
    "scikit-learn==1.3.2",
    "pydantic==2.5.2",
    "pydantic-settings==2.1.0",
    "sqlalchemy==2.0.23",
    "python-json-logger==2.0.7",
    "requests"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
